--- a/main-website/mandi-admin/assets/scss/custom.scss
+++ b/main-website/mandi-admin/assets/scss/custom.scss
@@ -53,15 +53,15 @@ form {
         }
     }
     .form-check-input {
-        &:checked {
-            background-color: $color-red;
-            border-color: $color-red;
-        }
-        &:focus {
-            border-color: rgba($color-red, 0.5);
-            outline: 0;
-            box-shadow: 0 0 0 0.25rem rgba($color-red, 0.2);
-        }
+        // &:checked {
+        //     background-color: $color-red;
+        //     border-color: $color-red;
+        // }
+        // &:focus {
+        //     border-color: rgba($color-red, 0.5);
+        //     outline: 0;
+        //     box-shadow: 0 0 0 0.25rem rgba($color-red, 0.2);
+        // }
     }
 }
 
@@ -166,8 +166,11 @@ table {
 }
 
 .blog-title {
-    display: block;
+    display: inline-block;
     text-overflow: ellipsis;
     width: 400px;
     overflow: hidden;
+}
+.embed-fullscreen{
+    height: 100vh;
 }
