Blogs Panel & 1st Cut

--- a/main-website/public/assets/css/style.css
+++ b/main-website/public/assets/css/style.css
@@ -6,7 +6,7 @@ Description:
 Version: 1.0
 
 Main Font    : Outfit
-Main Color   : #49a760
+Main Color   : #34720f
 
 -------------------------------------
 
@@ -19,7 +19,7 @@ Sidebar heading:  22px 'Outfit', sans-serif
 
 >>> TABLE OF CONTENTS:
 =======================
-        
+
     01. Template default css
         - Animations
         - General
@@ -100,10 +100,10 @@ Sidebar heading:  22px 'Outfit', sans-serif
 	--font-secondary: 'Shadows Into Light Two', cursive;
 	--fontawesome: "Font Awesome 5 Pro";
 	--black: #000000;
-	--dark: #1f4e3d;
+	--dark: #162c0a;
 	--dark-secondary: #1F1E17;
 	--white: #ffffff;
-	--color-secondary: #49a760;
+	--color-secondary: #34720f;
 	--color-primary: #f7c35f;
 	--color-heading: #04000b;
 	--color-paragraph: #666666;
@@ -111,12 +111,12 @@ Sidebar heading:  22px 'Outfit', sans-serif
 	--box-shadow-secondary: 0 10px 30px 0 rgba(44, 130, 237, 0.4);
 	--box-shadow-regular: 0px 2px 12px 0px #e7e7e7;
 	--bg-gray: #e9f1ee;
-	--bg-gradient: linear-gradient(97deg, #49a760 50%, rgba(252,197,27,1) 100%);
+	--bg-gradient: linear-gradient(97deg, #34720f 50%, rgba(252,197,27,1) 100%);
 }
 
 
 
-/* ============================================================== 
+/* ==============================================================
      # Reset Browsers
 =================================================================== */
 
@@ -287,7 +287,7 @@ strong {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Template Default Styles
 =================================================================== */
 
@@ -352,7 +352,7 @@ p {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Helper CSS
 =================================================================== */
 
@@ -443,6 +443,10 @@ p {
 .item-center {
 	display: flex;
 	align-items: center;
+}
+
+.text-theme{
+    color: var(--color-primary) !important;
 }
 
 .bg-cover {
@@ -927,8 +931,8 @@ p {
 	color: var(--white);
 }
 
-/* ============================================================== 
-    # Video Play Button 
+/* ==============================================================
+    # Video Play Button
 =================================================================== */
 .video-play-button i {
 	display: inline-block;
@@ -1091,7 +1095,7 @@ p {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Template Animation
 =================================================================== */
 
@@ -1572,7 +1576,7 @@ p {
 	}
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Button Styles
 =================================================================== */
 .btn {
@@ -2742,7 +2746,7 @@ a.btn-round-animation.dark {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Topbar Styles
 =================================================================== */
 
@@ -2852,7 +2856,7 @@ a.btn-round-animation.dark {
 	align-items: center;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Navbar Styles
 =================================================================== */
 @media (min-width: 1024px) {
@@ -2927,7 +2931,7 @@ a.btn-round-animation.dark {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Nice Select Styles
 =================================================================== */
 .nice-select {
@@ -3131,7 +3135,7 @@ a.btn-round-animation.dark {
 	color: var(--white);
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Banner Styles
 =================================================================== */
 .banner-area {
@@ -3867,7 +3871,7 @@ a.btn-round-animation.dark {
 	font-weight: 600;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Banner Custom Style
 =================================================================== */
 
@@ -3879,6 +3883,8 @@ a.btn-round-animation.dark {
 	visibility: visible;
 	-webkit-transition-delay: 400ms;
 	transition-delay: 400ms;
+	font-family: 'Font Awesome 5 Brands' !important;
+    font-size: 4.5rem;
 }
 
 .banner-area.banner-style-one .swiper-slide.swiper-slide-active p {
@@ -3921,8 +3927,9 @@ a.btn-round-animation.dark {
 }
 
 .banner-style-one .content h2 {
+    font-family: 'Font Awesome 5 Brands' !important;
 	font-size: 60px;
-	font-family: var(--font-secondary);
+	/*font-family: var(--font-secondary);*/
 	font-size: 90px;
 	letter-spacing: 3px;
 	margin-bottom: 30px;
@@ -4150,7 +4157,7 @@ a.btn-round-animation.dark {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # About
 =================================================================== */
 ul.top-feature {
@@ -4232,7 +4239,7 @@ ul.top-feature li:nth-child(2) p {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Services
 =================================================================== */
 
@@ -4321,7 +4328,7 @@ ul.top-feature li:nth-child(2) p {
 	background-position: right top;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Services
 =================================================================== */
 
@@ -4464,7 +4471,7 @@ h2.mask-text.large {
 	visibility: hidden;
 }
 
-.service-style-two-carousel.swiper .swiper-button-prev::after, 
+.service-style-two-carousel.swiper .swiper-button-prev::after,
 .service-style-two-carousel.swiper .swiper-button-next::after {
 	color: var(--white);
 	font-size: 30px;
@@ -4483,18 +4490,18 @@ h2.mask-text.large {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Services Details
 =================================================================== */
 .services-details-area .thumb img {
 	margin-bottom: 40px;
 }
 
-.services-details-area h1, 
-  .services-details-area h2, 
-  .services-details-area h3, 
-  .services-details-area h4, 
-  .services-details-area h5, 
+.services-details-area h1,
+  .services-details-area h2,
+  .services-details-area h3,
+  .services-details-area h4,
+  .services-details-area h5,
   .services-details-area h6 {
 	font-weight: 600;
 }
@@ -4859,7 +4866,7 @@ h2.mask-text.large {
 	text-transform: none;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Our Benifits
 =================================================================== */
 .fun-fact .medium {
@@ -4893,7 +4900,7 @@ h2.mask-text.large {
 	padding: 80px;
 	position: relative;
 	bottom: 0;
-	background: var(--color-secondary);
+	background: var(--color-primary);
 	margin-right: -15px;
 }
 
@@ -4948,7 +4955,7 @@ ul.list-standard {
 
 
 
-/* ============================================================== 
+/* ==============================================================
     # Product list
 =================================================================== */
 .product-cat-area {
@@ -5035,7 +5042,7 @@ ul.list-standard {
 	animation: UpDown 6s linear infinite;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Testimonial
 =================================================================== */
 
@@ -5132,7 +5139,7 @@ ul.list-standard {
 	text-transform: uppercase;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Testimonial Style Two
 =================================================================== */
 .testimonial-style-two-area {
@@ -5265,7 +5272,7 @@ ul.list-standard {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Gallery
 =================================================================== */
 .gallery-style-one {
@@ -5363,8 +5370,8 @@ ul.list-standard {
 }
 
 
-/* ============================================================== 
-    # Gallery 
+/* ==============================================================
+    # Gallery
 =================================================================== */
 
 .magnific-mix-gallery {
@@ -5405,17 +5412,17 @@ ul.list-standard {
 	}
 }
 
-  
+
   /* Max Wide Mobile Layout: 600px. */
 @media only screen and (min-width: 600px) and (max-width: 1200px) {
-  
+
 	  /* Portfolio */
 	.gallery-items.colums-4 .gallery-item {
 		width: 50%;
 	}
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Project Details
 =================================================================== */
 
@@ -5572,7 +5579,7 @@ ul.project-info li:first-child {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
 	 # Why Choose Us
 =================================================================== */
 .choose-us-thumb {
@@ -5651,7 +5658,7 @@ ul.list-details li p {
 	margin: 0;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Choose us Style Two
 =================================================================== */
 .choose-us-style-two-area {
@@ -5798,7 +5805,7 @@ ul.list-simple.text-light li p {
 	left: 3px;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Choose Us Style Three
 =================================================================== */
 .choose-us-style-three-area .shape {
@@ -5900,7 +5907,7 @@ ul.list-item li::after {
 	display: inline-block;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Farmers
 =================================================================== */
 
@@ -6038,8 +6045,8 @@ ul.list-item li::after {
 }
 
 
-/* ============================================================== 
-     # Team Single  
+/* ==============================================================
+     # Team Single
 =================================================================== */
 
 .team-single-area .team-content-top .right-info h2 {
@@ -6296,7 +6303,7 @@ ul.list-item li::after {
 
 
 
-/* ============================================================== 
+/* ==============================================================
     # Faq
 =================================================================== */
 
@@ -6394,7 +6401,7 @@ ul.list-item li::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Contact Us
 =================================================================== */
 
@@ -6510,7 +6517,7 @@ ul.list-item li::after {
 	margin-bottom: 40px;
 }
 
-.contact-form-style-one input, 
+.contact-form-style-one input,
 .contact-form-style-one textarea {
 	margin-bottom: 15px;
 	padding: 15px 20px;
@@ -6607,7 +6614,7 @@ img.loader {
 	max-width: 15%;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Feature
 =================================================================== */
 
@@ -6720,7 +6727,7 @@ img.loader {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Featuer Style Two
 =================================================================== */
 
@@ -6784,7 +6791,7 @@ img.loader {
 	border-radius: 50%;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Timeline
 =================================================================== */
 
@@ -6795,9 +6802,9 @@ img.loader {
 }
 
 .timeline-items {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-column-gap: 50px;
+	display: flex;
+    justify-content: space-between;
+	gap: 50px;
 	border-top: 2px solid var(--dark);
 	padding-top: 50px;
 }
@@ -6853,7 +6860,7 @@ img.loader {
 	border-radius: 50%;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Call to action
 =================================================================== */
 .call-to-action-area {
@@ -6910,14 +6917,14 @@ img.loader {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Brand
 =================================================================== */
 .brand-style-one-carousel img {
 	height: 100px;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Product Speciality
 =================================================================== */
 .product-badge {
@@ -6972,7 +6979,7 @@ img.loader {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Category Product
 =================================================================== */
 .product-cat-highlight-info {
@@ -7137,7 +7144,7 @@ ul.product-features li:last-child {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Footer
 =================================================================== */
 footer {
@@ -7165,13 +7172,14 @@ footer {
 	padding-top: 70px;
 }
 
-.footer-item .logo, 
+.footer-item .logo,
 .footer-item .widget-title {
 	margin-bottom: 30px;
 }
 
 .footer-item .logo {
 	height: 60px;
+    border-radius: 0.5rem;
 }
 
 .footer-item .widget-title {
@@ -7331,7 +7339,7 @@ footer {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # 404 page
 =================================================================== */
 
@@ -7388,8 +7396,8 @@ footer {
 
 
 
-/* ============================================================== 
-     # Responsive CSS  
+/* ==============================================================
+     # Responsive CSS
 =================================================================== */
 
 /* Custom Layout */
@@ -8929,7 +8937,7 @@ footer {
 	}
 
 	/* Contact */
-	
+
 	.contact-form-style-one {
 		padding: 60px 40px;
 	}
@@ -8964,8 +8972,8 @@ footer {
 
 
 
-/* ============================================================== 
-     # Preloader 
+/* ==============================================================
+     # Preloader
 =================================================================== */
 
 .agrica-preloader {
