--- a/main-website/public/assets/css/style.css
+++ b/main-website/public/assets/css/style.css
@@ -1,7 +1,7 @@
 /* ----------------------------------
 
-Template Name: Agrica - Organic Farm Agriculture Template
-Author: validtheme
+Template Name: NCDEXMandi
+Author: sociomark
 Description:
 Version: 1.0
 
