--- a/main-website/public/theme02/assets/scss/style.scss
+++ b/main-website/public/theme02/assets/scss/style.scss
@@ -100,7 +100,8 @@ a {
     border-radius: 0.25rem;
 }
 header {
-    position: fixed;
+    position: sticky;
+    top: 0;
     z-index: 99;
     nav.navbar {
         .navbar-nav {
@@ -112,7 +113,6 @@ header {
         }
     }
 }
-
 
 .breadcrumb-area {
     padding: 150px 0;
@@ -140,12 +140,12 @@ header {
         }
     }
 
-    .breadcrumb{
+    .breadcrumb {
         .breadcrumb-item,
-        .breadcrumb-item{
+        .breadcrumb-item {
             color: $color-white;
         }
-        .breadcrumb-item+.breadcrumb-item::before{
+        .breadcrumb-item + .breadcrumb-item::before {
             color: $color-white;
         }
     }
@@ -179,6 +179,80 @@ section {
 }
 
 .event-style-one {
+    a{
+        h3,h4{
+            color: $color-green;
+            &:hover{
+                
+            }
+        }
+    }
+
+    .thumb {
+        position: relative;
+        margin-bottom: 2.5rem;
+        .date {
+            position: absolute;
+            left: 0;
+            bottom: -32px;
+            background: $color-yellow;
+            color: $color-black;
+            text-align: center;
+            strong {
+                font-size: 36px;
+                line-height: 1;
+                padding: 15px 10px;
+                display: block;
+            }
+            span {
+                display: block;
+                background: $color-green;
+                color: $color-white;
+                padding: 5px 10px;
+                font-weight: 400;
+                font-size: 15px;
+            }
+        }
+    }
+    .event_image {
+    }
+
+    .social-share {
+        .social-icon {
+            color: $color-black;
+            width: 2.5rem;
+            aspect-ratio: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            border: 1px solid $color-black;
+        }
+    }
+}
+.clipped-content {
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    @for $i from 1 through 5 { // Generate classes for 1 to 5 lines
+        &.line-#{$i}{
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: $i;
+          line-clamp: $i; /* Standard property */
+        }
+      }
+}
+.event-style-two {
+    a{
+        h3,h4{
+            color: $color-green;
+            &:hover{
+                
+            }
+        }
+    }
+
     .thumb {
         position: relative;
         margin-bottom: 2.5rem;
@@ -207,6 +281,19 @@ section {
     }
 
     .event_image {
+    }
+
+    .social-share {
+        .social-icon {
+            color: $color-black;
+            width: 2.5rem;
+            aspect-ratio: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            border: 1px solid $color-black;
+        }
     }
 }
 
