--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -8,6 +8,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+a:hover {
+  color: #19641e;
+}
 
 .btn {
   padding: 0.25rem 1rem;
@@ -100,6 +103,27 @@ header nav.navbar .navbar-nav .nav-item .nav-link {
   color: #000;
 }
 
+.swiper .swiper-button-prev::after {
+  background-image: url("../icons/left.png");
+}
+.swiper .swiper-button-next:after {
+  background-image: url("../icons/right.png");
+}
+.swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+.swiper .swiper-button-prev::after,
+.swiper .swiper-button-next::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
 .breadcrumb-area {
   padding: 150px 0;
   padding-top: 160px;
@@ -156,8 +180,21 @@ section .section-title::after {
   bottom: -0.5rem;
   left: 0;
 }
+section .section-title::before {
+  content: "";
+  height: 2rem;
+  height: 2.3rem;
+  position: relative;
+  display: inline-block;
+  right: 0.25rem;
+  aspect-ratio: 1;
+  top: 0.5rem;
+  background: url(../ico.png) no-repeat;
+  background-size: 105% auto;
+}
 
-.event-style-one a h3, .event-style-one a h4 {
+.event-style-one a h3,
+.event-style-one a h4 {
   color: #19641e;
 }
 .event-style-one .thumb {
@@ -232,7 +269,8 @@ section .section-title::after {
   line-clamp: 5; /* Standard property */
 }
 
-.event-style-two a h3, .event-style-two a h4 {
+.event-style-two a h3,
+.event-style-two a h4 {
   color: #19641e;
 }
 .event-style-two .thumb {
