--- a/main-website/public/theme02/assets/scss/style.scss
+++ b/main-website/public/theme02/assets/scss/style.scss
@@ -12,6 +12,9 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+    &:hover {
+        color: $color-green;
+    }
 }
 
 .btn {
@@ -113,7 +116,30 @@ header {
         }
     }
 }
-
+.swiper {
+    .swiper-button-prev::after {
+        background-image: url("../icons/left.png");
+    }
+    .swiper-button-next:after {
+        background-image: url("../icons/right.png");
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        &::after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+        }
+    }
+}
 .breadcrumb-area {
     padding: 150px 0;
     padding-top: 160px;
@@ -175,15 +201,27 @@ section {
             bottom: -0.5rem;
             left: 0;
         }
+        &::before {
+            content: "";
+            height: 2rem;
+            height: 2.3rem;
+            position: relative;
+            display: inline-block;
+            right: 0.25rem;
+            aspect-ratio: 1;
+            top: 0.5rem;
+            background: url(../ico.png) no-repeat;
+            background-size: 105% auto;
+        }
     }
 }
 
 .event-style-one {
-    a{
-        h3,h4{
+    a {
+        h3,
+        h4 {
             color: $color-green;
-            &:hover{
-                
+            &:hover {
             }
         }
     }
@@ -234,21 +272,22 @@ section {
     overflow: hidden;
     text-overflow: ellipsis;
 
-    @for $i from 1 through 5 { // Generate classes for 1 to 5 lines
-        &.line-#{$i}{
-          display: -webkit-box;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: $i;
-          line-clamp: $i; /* Standard property */
+    @for $i from 1 through 5 {
+        // Generate classes for 1 to 5 lines
+        &.line-#{$i} {
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: $i;
+            line-clamp: $i; /* Standard property */
         }
-      }
+    }
 }
 .event-style-two {
-    a{
-        h3,h4{
+    a {
+        h3,
+        h4 {
             color: $color-green;
-            &:hover{
-                
+            &:hover {
             }
         }
     }
