--- a/main-website/public/theme02/assets/scss/style.scss
+++ b/main-website/public/theme02/assets/scss/style.scss
@@ -110,7 +110,7 @@ header {
         .navbar-nav {
             .nav-item {
                 .nav-link {
-                    color: $color-black;
+                    color: $color-white;
                 }
             }
         }
