--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -63,6 +63,22 @@ table th {
   --bs-btn-disabled-bg: #f7c35f;
   --bs-btn-disabled-border-color: #f7c35f;
 }
+.btn.btn-transparent {
+  --bs-btn-color: #000;
+  --bs-btn-bg: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: transparent;
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: transparent;
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: transparent;
+}
 .btn.btn-round {
   width: 3rem;
   aspect-ratio: 1;
@@ -70,16 +86,21 @@ table th {
   place-items: center;
   border-radius: 50%;
 }
+.btn.btn-icon {
+  display: flex;
+}
 .btn.btn-icon:has(.icon-prepend) {
   padding-left: 0.75rem;
 }
 .btn.btn-icon:has(.icon-prepend) .icon-prepend {
+  padding: 0.4rem;
   margin-right: 0.1rem;
 }
 .btn.btn-icon:has(.icon-append) {
   padding-right: 0.75rem;
 }
 .btn.btn-icon:has(.icon-append) .icon-append {
+  padding: 0.4rem;
   margin-left: 0.1rem;
 }
 .btn.btn-search {
@@ -132,10 +153,28 @@ table th {
   overflow: hidden;
 }
 
+.frame {
+  padding: 0.25rem;
+  border-radius: 0.75rem;
+  background-color: #19641e;
+}
+.frame.frame-01 {
+  background: linear-gradient(30deg, #19641e 0%, #19641e 50%, #f7c35f 50%, #f7c35f 100%);
+}
+.frame img {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
 .form-control:focus {
   border-color: rgba(25, 100, 30, 0.1);
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(25, 100, 30, 0.25);
+}
+
+.form-control-transparent {
+  border: none;
+  background: none;
 }
 
 .logo {
@@ -210,6 +249,32 @@ section.nospacing {
 }
 section.default-spacing {
   padding: max(5%, 1rem) 0;
+}
+section .title-icon {
+  font-size: 2rem;
+  margin-bottom: 2.5rem;
+  display: flex;
+  align-items: center;
+}
+section .title-icon .icon {
+  -webkit-mask-image: url("../masks/hexagonal.svg");
+          mask-image: url("../masks/hexagonal.svg");
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+          mask-size: contain;
+  -webkit-mask-position: center;
+          mask-position: center;
+  padding: 1rem;
+  font-size: 1.2rem;
+  background-color: #19641e;
+  color: white;
+}
+section .title-icon:has(.icon-prepend) .icon-prepend {
+  margin-right: 0.5rem;
+}
+section .title-icon:has(.icon-append) .icon-append {
+  margin-left: 0.5rem;
 }
 section .section-title {
   font-size: 2rem;
