--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -48,26 +48,26 @@ table th {
   --bs-btn-disabled-border-color: #19641e;
 }
 .btn.btn-secondary {
-  --bs-btn-color: $color-black;
+  --bs-btn-color: #000 !important;
   --bs-btn-bg: #f7c35f;
   --bs-btn-border-color: #f7c35f;
-  --bs-btn-hover-color: $color-black;
+  --bs-btn-hover-color: #000 !important;
   --bs-btn-hover-bg: #f8cc77;
   --bs-btn-hover-border-color: #f8cc77;
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
-  --bs-btn-active-color: $color-black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #f8cc77;
   --bs-btn-active-border-color: #f8cc77;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: $color-black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #f7c35f;
   --bs-btn-disabled-border-color: #f7c35f;
 }
 .btn.btn-transparent {
-  --bs-btn-color: #000;
+  --bs-btn-color: #000 !important;
   --bs-btn-bg: transparent;
   --bs-btn-border-color: transparent;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: #000 !important;
   --bs-btn-hover-bg: transparent;
   --bs-btn-hover-border-color: transparent;
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
@@ -180,6 +180,27 @@ table th {
 .logo {
   overflow: hidden;
   border-radius: 0.25rem;
+}
+
+.thumbnail-style-01:hover .icon {
+  box-shadow: 0 0 0 0.2rem #f7c35f;
+}
+.thumbnail-style-01 .icon {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100%;
+  aspect-ratio: 1;
+  box-shadow: 0 0 0 0.2rem #19641e;
+  padding: 0.25rem;
+  margin: 0.2rem;
+}
+.thumbnail-style-01 .icon img {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 header {
