--- a/main-website/public/theme02/assets/scss/style.scss
+++ b/main-website/public/theme02/assets/scss/style.scss
@@ -54,26 +54,26 @@ table {
         --bs-btn-disabled-border-color: #{$color-green};
     }
     &.btn-secondary {
-        --bs-btn-color: $color-black;
+        --bs-btn-color: #{$color-black} !important;
         --bs-btn-bg: #{$color-yellow};
         --bs-btn-border-color: #{$color-yellow};
-        --bs-btn-hover-color: $color-black;
+        --bs-btn-hover-color: #{$color-black} !important;
         --bs-btn-hover-bg: #{lighten($color-yellow, 5)};
         --bs-btn-hover-border-color: #{lighten($color-yellow, 5)};
         --bs-btn-focus-shadow-rgb: 130, 138, 145;
-        --bs-btn-active-color: $color-black;
+        --bs-btn-active-color: #{$color-black};
         --bs-btn-active-bg: #{lighten($color-yellow, 5)};
         --bs-btn-active-border-color: #{lighten($color-yellow, 5)};
         --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-        --bs-btn-disabled-color: $color-black;
+        --bs-btn-disabled-color: #{$color-black};
         --bs-btn-disabled-bg: #{$color-yellow};
         --bs-btn-disabled-border-color: #{$color-yellow};
     }
     &.btn-transparent {
-        --bs-btn-color: #000;
+        --bs-btn-color: #000 !important;
         --bs-btn-bg: transparent;
         --bs-btn-border-color: transparent;
-        --bs-btn-hover-color: #000;
+        --bs-btn-hover-color: #000 !important;
         --bs-btn-hover-bg: transparent;
         --bs-btn-hover-border-color: transparent;
         --bs-btn-focus-shadow-rgb: 49, 132, 253;
@@ -202,6 +202,30 @@ table {
     overflow: hidden;
     border-radius: 0.25rem;
 }
+.thumbnail-style-01{
+    &:hover{
+        .icon{
+            box-shadow: 0 0 0 0.2rem $color-yellow;
+        }
+    }
+    .icon{
+        border-radius: 50%;
+        overflow: hidden;
+        width: 100%;
+        aspect-ratio: 1;
+        box-shadow: 0 0 0 0.2rem $color-green;
+        padding: 0.25rem;
+        margin: 0.2rem;
+        img{
+            border-radius: 50%;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
 header {
     position: sticky;
     top: 0;
@@ -466,6 +490,7 @@ footer {
     padding: calc(max(5%, 1rem)) 0;
     color: $color-white;
     font-size: 0.9rem;
+    .footer-form{}
     .footer-social {
         .social-icon {
             width: 2.5rem;
