--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -128,6 +128,7 @@ table th {
   text-overflow: ellipsis;
 }
 
+@keyframes flash {}
 .card-stack.colored .data-card {
   border-radius: 0.75rem;
   overflow: hidden;
@@ -442,6 +443,21 @@ section .section-title::before {
   justify-content: center;
   border-radius: 50%;
   border: 1px solid #000;
+}
+
+svg#india_map path {
+  fill: #e4e4e4;
+  stroke: #000;
+  cursor: pointer;
+}
+svg#india_map path.active {
+  fill: #19641e;
+}
+svg#india_map path:not(.active):hover {
+  fill: #f7c35f;
+}
+svg#india_map path:active {
+  fill: #f5b12e;
 }
 
 footer {
